gl51-master/src/test/deca/context/valid/test-rule0_1.deca
//Description

{

    string a = "Hello";
    //int a = 2;
    println(a);
    println("ok1", "ok2", "ok5");
}