gl51-master/src/test/deca/context/invalid/testObject_rule3_31.deca
//Description
//Expression non compatible avec print

class A {}
{
    A a = new A();
    println(a); //On peut pas print un objet class
}
//passed
